--- a/ClientApp/src/css/ChangePassWord.css
+++ b/ClientApp/src/css/ChangePassWord.css
@@ -1,7 +1,7 @@
 ﻿body {
 }
 
-.password_Box {
+.passwordBox {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -9,15 +9,30 @@
     overflow: hidden;
 }
 
-.password_Box #password {
+.passwordBox #password {
     vertical-align: middle;
     margin-top: 0;
     margin-left: 20px;
     float: right;
 }
 
-.password_Box .modify {
+.passwordBox .modify {
     margin-top: 20px;
     display: block;
+}
 
+.currentPassBox {
+    overflow: hidden;
+}
+
+.currentPassBox input {
+    float: right;
+}
+
+.changePassBox {
+    overflow: hidden;
+}
+
+.changePassBox input {
+    float: right;
 }
